--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>playjuhrizuhm</name>
     <description>playjuhrizuhm</description>
+
     <properties>
-        <java.version>17</java.version>
+        <java.version>14</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
